--- a/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitPass.template
@@ -27,7 +27,7 @@ Pass
     //-------------------------------------------------------------------------------------
     // Variant
     //-------------------------------------------------------------------------------------
-    
+
     // #pragma shader_feature_local _DOUBLESIDED_ON - We have no lighting, so no need to have this combination for shader, the option will just disable backface culling
 
     // Keyword for transparent
@@ -36,7 +36,7 @@ Pass
 
     $AlphaFog:                           #define _ENABLE_FOG_ON_TRANSPARENT 1
     $AddPrecomputedVelocity:            #define _ADD_PRECOMPUTED_VELOCITY
-   
+
     //enable GPU instancing support
     #pragma multi_compile_instancing
 
@@ -129,6 +129,14 @@ $include("SharedCode.template.hlsl")
 
     void GetSurfaceAndBuiltinData(FragInputs fragInputs, float3 V, inout PositionInputs posInput, out SurfaceData surfaceData, out BuiltinData builtinData)
     {
+        // custom-begin:
+    #ifdef _ENABLE_DISSOLVE_ON_OCCLUSION
+        #if (SHADERPASS != SHADERPASS_SHADOWS)
+                ClipFromDissolveOccluders(posInput, _ScreenSize);
+        #endif
+    #endif
+        // custom-end
+
         SurfaceDescriptionInputs surfaceDescriptionInputs = FragInputsToSurfaceDescriptionInputs(fragInputs, V);
         SurfaceDescription surfaceDescription = SurfaceDescriptionFunction(surfaceDescriptionInputs);
 
