--- a/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitRaytracingPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitRaytracingPass.template
@@ -40,6 +40,9 @@ Pass
     $RefractionSphere:                   #define _REFRACTION_SPHERE 1
     $DisableDecals:                      #define _DISABLE_DECALS 1
     $DisableSSR:                         #define _DISABLE_SSR 1
+    // custom-begin:
+    $DissolveOnOcclusion:                 #define _ENABLE_DISSOLVE_ON_OCCLUSION 1
+    // custom-end
 
     //-------------------------------------------------------------------------------------
     // End Variant Definitions
