Changing from project.folder back to project.name (#4436)
using project.folder breaks CI because the pipelines point to the wrong thing

--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -80,8 +80,8 @@ projects:
 
 
 
-All_{{ project.folder }}:
-  name: All {{ project.folder }} CI
+All_{{ project.name }}:
+  name: All {{ project.name }} CI
   agent:
     name: whatever
     type: Unity::VM
