--- a/.yamato/upm-ci-vfx_lwrp.yml
+++ b/.yamato/upm-ci-vfx_lwrp.yml
@@ -9,10 +9,10 @@ platforms:
     type: Unity::metal::macmini
     image: slough-ops/macos-10.14-xcode
     flavor: m1.mac
-  # - name: OSX_OpenGLCore
-    # type: Unity::VM::osx
-    # image: buildfarm/mac:stable
-    # flavor: m1.mac
+  - name: OSX_OpenGLCore
+    type: Unity::VM::osx
+    image: buildfarm/mac:stable
+    flavor: m1.mac
 testplatforms:
   - name: Standalone
     args: --suite=playmode --platform=Standalone
@@ -27,58 +27,81 @@ projects:
 ---
 {% for project in projects %}
 {% for editor in editors %}
-{% for platform in platforms %}
+
 {% for testplatform in testplatforms %}
-
-{% if platform.name == "OSX" and testplatform.name == "editmode" %}
-#skip
-{% else %}
-
-{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on {{ platform.name }}_{{ testplatform.name }} on version {{ editor.version }}
+{{ project.name }}_OSX_OpenGLCore_{{ testplatform.name }}_{{ editor.version }}:
+  name : Test {{ project.name }} on OSX_OpenGLCore_{{ testplatform.name }} on version {{ editor.version }}
   agent:
-    {% if testplatform.name == "editmode" and platform.name == "Windows64" %}
-    type: Unity::VM
-    {% else %}
-    type: {{ platform.type }}
-    {% endif %}
-    image: {{ platform.image }}
-    flavor: {{ platform.flavor}}
+    type: Unity::VM::osx
+    image: buildfarm/mac:stable
+    flavor: m1.mac
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    {% if platform.name == "OSX_OpenGLCore" %}
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
     
     {% if testplatform.name == "Standalone" %}
-    - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }}{{ platform.name }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }}OSX --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results  --timeout=1200
     {% else %}
     - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
     {% endif %}
-    
-    
+  artifacts:
+    logs:
+      paths:
+        - "**/test-results/**"
+{% endfor %}
+
+
+{% for testplatform in testplatforms %}
+{{ project.name }}_Windows64_{{ testplatform.name }}_{{ editor.version }}:
+  name : Test {{ project.name }} on Windows64_{{ testplatform.name }} on version {{ editor.version }}
+  agent:
+    {% if testplatform.name == "editmode" %}
+    type: Unity::VM
     {% else %}
-    {% if platform.name == "Windows64" %}
+    type: Unity::VM::GPU
+    {% endif %} 
+    image: sdet/gamecode_win10:stable      
+    flavor: b1.large
+  commands:
+    - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
-     
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published    
+
     {% if testplatform.name == "Standalone" %}
-    - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }}{{ platform.name }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200"
+    - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }}Windows64 --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200"
     {% else %}
     - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results"
     {% endif %}
-      
-    {% else %}
-      
+  artifacts:
+    logs:
+      paths:
+        - "**/test-results/**"    
+{% endfor %}
+
+
+{% for testplatform in testplatforms %}
+{% if testplatform.name == "editmode" %}
+#skip because we don't need a GPU to run editmode tests
+{% else %}
+{{ project.name }}_OSX_{{ testplatform.name }}_{{ editor.version }}:
+  name : Test {{ project.name }} on OSX_{{ testplatform.name }} on version {{ editor.version }}
+  agent:
+    type: Unity::metal::macmini
+    image: slough-ops/macos-10.14-xcode
+    flavor: m1.mac
+  commands:
+    - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
+    
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli -u {{ editor.version }} -c editor --wait --published'
     {% if testplatform.name == "Standalone" %}
     - |
-      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}{{ platform.name }}  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results'
+      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results  --timeout=1200'
     {% else %}
     - |
       ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }} --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results'
@@ -87,17 +110,12 @@ projects:
       mkdir -p TestProjects/{{ project.folder }}/test-results/
       scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results/ TestProjects/{{ project.folder }}/test-results/
       exit $UTR_RESULT
-      
-    {% endif %}
-    {% endif %}
+
   artifacts:
     logs:
       paths:
         - "**/test-results/**"
-   
 {% endif %}
-{% endfor %}
-{% endfor %}
 {% endfor %}
 
 
@@ -111,7 +129,6 @@ All_{{ project.name }}:
   commands:
     - dir
   dependencies:
-  {% for editor in editors %}
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% if platform.name == "OSX_OpenGLCore" %}
@@ -120,14 +137,15 @@ All_{{ project.name }}:
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
   
-  {% elsif platform.name == "OSX"  and testplatform.name == "editmode" %}
-  
+  {% elsif platform.name == "OSX" %}
+  #skip
+
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
   {% endif %}
     
   {% endfor %}
   {% endfor %}
-  {% endfor %}
-  
+
+{% endfor %}    
 {% endfor %}
