--- a/com.unity.render-pipelines.high-definition-config/package.json
+++ b/com.unity.render-pipelines.high-definition-config/package.json
@@ -1,11 +1,11 @@
 {
     "name": "com.unity.render-pipelines.high-definition-config",
     "description": "Configuration files for the High Definition Render Pipeline.",
-    "version": "7.1.1",
+    "version": "7.2.0",
     "unity": "2019.3",
-    "unityRelease": "0a12",
+    "unityRelease": "0b3",
     "displayName": "High Definition RP Config",
     "dependencies": {
-        "com.unity.render-pipelines.core": "7.1.1"
+        "com.unity.render-pipelines.core": "7.2.0"
     }
 }
