--- a/com.unity.testframework.graphics/package.json
+++ b/com.unity.testframework.graphics/package.json
@@ -1,9 +1,9 @@
 {
     "name": "com.unity.testframework.graphics",
     "displayName":"Graphics Tests Framework",
-    "version": "7.1.1",
+    "version": "7.2.0",
     "unity": "2019.3",
-    "unityRelease": "0a12",
+    "unityRelease": "0b3",
     "description": "Provides test framework helpers for writing tests for graphics code, such as image comparison assertions and automatic management of reference images.",
     "keywords": ["qa", "test", "testing", "tests", "graphics"],
     "dependencies": {
