--- a/com.unity.visualeffectgraph/package.json
+++ b/com.unity.visualeffectgraph/package.json
@@ -1,9 +1,9 @@
 {
     "name":"com.unity.visualeffectgraph",
     "displayName": "Visual Effect Graph",
-    "version":"7.1.1",
+    "version":"7.2.0",
     "unity": "2019.3",
-    "unityRelease": "0a12",
+    "unityRelease": "0b3",
     "description":"The Visual Effect Graph is a node based visual effect editor. It enables artists to author next generation visual effects simulated directly on GPU",
     "keywords":[
         "vfx",
