[Yamato] Add hdconfig dependency in packages yml (#4524)
* adding core as a packing dependency for hd config package

--- a/.yamato/upm-ci-packages.yml
+++ b/.yamato/upm-ci-packages.yml
@@ -49,7 +49,9 @@ packages:
     id: config
     packagename: com.unity.render-pipelines.high-definition-config
     dependencies:
+      - .yamato/upm-ci-packages.yml#pack_core
       - .yamato/upm-ci-packages.yml#pack_config
+    hascodependencies: 1
 platforms:
     - name: win
       agent:
