[Shader Graph] Procedural Pattern Samples (#4515)
* adding sample subgraphs to sample package subpath

* adding samples docs

* Minor update to CHANGELOG.md

* Edited ShaderGraph-Samples.md

* Corrected typo (ShaderGraph-Samples)

--- a/com.unity.shadergraph/package.json
+++ b/com.unity.shadergraph/package.json
@@ -7,5 +7,12 @@
     "displayName": "Shader Graph",
     "dependencies": {
         "com.unity.render-pipelines.core": "7.2.0"
-    }
+    },
+	"samples" :[
+		{
+			"displayName":"Procedural Patterns",
+			"description":"This collection of assets showcase various procedural techniques possible with Shader Graph. Use them in your project or edit them to create other procedural pattens. Patterns: Bacteria, Brick, Dots, Grid, Herringbone, Hex Lattice, Houndstooth, Smooth Wave, Spiral, Stripes, Truchet, Whirl, Zig Zag",
+			"path" : "Samples~/ProceduralPatterns"
+		}
+	]
 }
