--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -9,6 +9,11 @@ platforms:
     type: Unity::metal::macmini
     image: slough-ops/macos-10.14-xcode
     flavor: m1.mac
+mobiles:
+  - name: iOS
+    type: Unity::mobile::iPadPro
+    image: slough-ops/macos-10.14-xcode
+    flavor: b1.large
 testplatforms:
   - name: Standalone
     args: --suite=playmode --platform=Standalone
@@ -37,14 +42,14 @@ mac_apis:
     type: Unity::VM
     {% else %}
     type: Unity::VM::GPU
-    {% endif %} 
-    image: sdet/gamecode_win10:stable      
+    {% endif %}
+    image: sdet/gamecode_win10:stable
     flavor: b1.large
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published    
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
 
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200"
@@ -55,7 +60,7 @@ mac_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}    
+{% endfor %}
 {% endfor %}
 
 
@@ -71,7 +76,7 @@ mac_apis:
     flavor: m1.mac
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    
+
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
@@ -95,6 +100,28 @@ mac_apis:
 {% endif %}
 {% endfor %}
 
+{% for mobile in mobiles %}
+{% for project in projects %}
+{% for editor in editors %}
+{{ project.name }}_{{ mobile.name }}_{{ editor.version }}:
+  name: Build and Test {{ project.name }} on {{ mobile.name }} on version {{ editor.version }}
+  agent:
+    type: {{ mobile.type }}
+    image: {{ mobile.image }}
+    flavor: {{ mobile.flavor }}
+  commands:
+   - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
+   - git clone git@github.cds.internal.unity3d.com:unity/utr.git utr
+   - unity-downloader-cli -b {{ editor.version }} -p MacEditor -c editor -c {{ mobile.name }} --wait
+   - utr/utr --suite=playmode --platform={{ mobile.name }} --testproject=TestProjects/{{ project.folder }} --editor-location=MacEditor --artifacts_path=upm-ci~/test-results --scripting-backend=il2cpp
+  artifacts:
+    logs:
+      paths:
+        - "**/upm-ci~/test-results/**/*"
+{% endfor %}
+{% endfor %}
+{% endfor %}
+
 
 All_{{ project.name }}:
   name: All {{ project.name }} CI
@@ -109,16 +136,16 @@ All_{{ project.name }}:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% if platform.name == "OSX_OpenGLCore" %}
-  
+
   {% if testplatform.name == "editmode" %}
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-  
+
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
-  
+
   {% elsif platform.name == "OSX_Metal" %}
   #skip
-  
+
   {% elsif platform.name == "Windows64" %}
   {% for win_api in win_apis %}
   {% if win_api.name == "Vulkan" %}
@@ -129,11 +156,11 @@ All_{{ project.name }}:
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-    
+
   {% endfor %}
   {% endfor %}
 
-{% endfor %}    
+{% endfor %}
 {% endfor %}
