--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -58,6 +58,7 @@ Pass
     $Varyings.fogFactorAndVertexLight:  #define VARYINGS_NEED_FOG_AND_VERTEX_LIGHT
     $Varyings.cullFace:                 #define VARYINGS_NEED_CULLFACE
     $features.graphVertex:              #define FEATURES_GRAPH_VERTEX
+    $features.preview:                  #define SHADERGRAPH_PREVIEW 1
     $splice(GraphDefines)
 
     // Includes
