--- a/com.unity.shadergraph/Editor/Unity.ShaderGraph.Editor.asmdef
+++ b/com.unity.shadergraph/Editor/Unity.ShaderGraph.Editor.asmdef
@@ -6,9 +6,12 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
