--- a/com.unity.shadergraph/package.json
+++ b/com.unity.shadergraph/package.json
@@ -6,6 +6,7 @@
     "unityRelease": "0b3",
     "displayName": "Shader Graph",
     "dependencies": {
-        "com.unity.render-pipelines.core": "7.2.0"
+        "com.unity.render-pipelines.core": "7.2.0",
+        "com.unity.nuget.newtonsoft-json": "1.0.1-preview.1"
     }
 }
