--- a/com.unity.testframework.graphics/package.json
+++ b/com.unity.testframework.graphics/package.json
@@ -7,5 +7,6 @@
     "description": "Provides test framework helpers for writing tests for graphics code, such as image comparison assertions and automatic management of reference images.",
     "keywords": ["qa", "test", "testing", "tests", "graphics"],
     "dependencies": {
+        "com.unity.nuget.newtonsoft-json": "1.0.1-preview.1"
     }
 }
