[2019.2/lw][XR] enable Android postprocessing using single-pass double-wide stereo mode (#4387)
* On Android, Postprocessing v2 works with single-pass double-wide mode and is disabled for multiview

* change unityRelease version to 6f1 to go with engine changes

* change unityRelease version to 6f1

* add change log for XR android/GO postprocessing support

--- a/com.unity.testframework.graphics/package.json
+++ b/com.unity.testframework.graphics/package.json
@@ -3,7 +3,7 @@
 	"displayName":"Graphics Tests Framework",
 	"version": "6.10.0",
 	"unity": "2019.2",
-	"unityRelease": "0b9",
+	"unityRelease": "6f1",
 	"description": "Provides test framework helpers for writing tests for graphics code, such as image comparison assertions and automatic management of reference images.",
 	"keywords": ["qa", "test", "testing", "tests", "graphics"],
 	"dependencies": {
