--- a/com.unity.render-pipelines.core/package.json
+++ b/com.unity.render-pipelines.core/package.json
@@ -3,6 +3,6 @@
     "description": "Helper library for SRP that contains a new Shader Library, and utility functions that can be used to implement a custom SRP. This library is currently used by both the High Definition Render Pipeline and the Lightweight Render Pipeline.",
     "version": "6.10.0",
     "unity": "2019.2",
-	"unityRelease": "0b9",
+	"unityRelease": "6f1",
     "displayName": "Core RP Library"
 }
