--- a/com.unity.visualeffectgraph/package.json
+++ b/com.unity.visualeffectgraph/package.json
@@ -3,7 +3,7 @@
     "displayName": "Visual Effect Graph",
     "version":"6.10.0-preview",
 	"unity": "2019.2",
-	"unityRelease": "0b9",
+	"unityRelease": "6f1",
     "description":"The Visual Effect Graph is a node based visual effect editor. It enables artists to author next generation visual effects simulated directly on GPU",
     "keywords":[
         "vfx",
