updated pipelines path for outputting results and added vfx pipelines for linux

--- a/.yamato/upm-ci-universal.yml
+++ b/.yamato/upm-ci-universal.yml
@@ -157,7 +157,7 @@ linux_apis:
   artifacts:
     logs:
       paths:
-        - "**/upm-ci~/test-results/**/*"  
+        - "**/test-results/**/*"  
 {% endfor %}   
 {% endfor %}
 
