--- a/.yamato/upm-ci-postprocessing.yml
+++ b/.yamato/upm-ci-postprocessing.yml
@@ -163,7 +163,7 @@ linux_apis:
   artifacts:
     logs:
       paths:
-        - "**/upm-ci~/test-results/**/*"  
+        - "**/test-results/**/*"  
 {% endfor %}   
 {% endfor %}
 
