first pass to test in universal

--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -82,8 +82,7 @@ Pass
 
     // --------------------------------------------------
     // Structs and Packing
-
-    $buildType(Attributes)
+    $splice(PassStructs)
 
     $buildType(Varyings)
 
