base branch related changes

--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -84,7 +84,7 @@ Pass
     // Structs and Packing
     $splice(PassStructs)
 
-    $buildType(Varyings)
+    $splice(InterpolatorPack)
 
     // --------------------------------------------------
     // Build Graph Inputs
