base branch related changes

--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -87,7 +87,7 @@ Pass
 
     $buildType(Attributes)
 
-    $buildType(Varyings)
+    $splice(InterpolatorPack)
 
     // --------------------------------------------------
     // Build Graph Inputs
