temporary universal implementation

--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -85,7 +85,7 @@ Pass
     // --------------------------------------------------
     // Structs and Packing
 
-    $buildType(Attributes)
+    $splice(PassStructs)
 
     $splice(InterpolatorPack)
 
