Move render states to single splice

--- a/com.unity.shadergraph/Editor/Templates/PassMesh.template
+++ b/com.unity.shadergraph/Editor/Templates/PassMesh.template
@@ -7,14 +7,7 @@ Pass
     }
    
     // Render State
-    $splice(Blend)
-    $splice(BlendOp)
-    $splice(Cull)
-    $splice(ZTest)
-    $splice(ZWrite)
-    $splice(ZClip)
-    $splice(ColorMask)
-    $splice(Stencil)
+    $splice(RenderState)
 
     // Debug
     $splice(Debug)
