Update all HDRP passes

--- a/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/LitRaytracingPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/LitRaytracingPass.template
@@ -6,6 +6,9 @@ Pass
         $splice(LightMode)
     }
 
+    // Render State
+    $splice(RenderState)
+
     HLSLPROGRAM
     #pragma raytracing test
 
