--- a/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/UnlitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/UnlitPass.template
@@ -7,14 +7,7 @@ Pass
     }
    
     // Render State
-    $splice(Blending)
-    $splice(BlendingOp)
-    $splice(Culling)
-    $splice(ZTest)
-    $splice(ZWrite)
-    $splice(ZClip)
-    $splice(Stencil)
-    $splice(ColorMask)
+    $splice(RenderState)
 
     HLSLPROGRAM
     #pragma vertex Vert
