--- a/com.unity.render-pipelines.high-definition/Editor/Material/Hair/ShaderGraph/HairPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Hair/ShaderGraph/HairPass.template
@@ -89,6 +89,13 @@ Pass
     int _PassValue;
 
     // --------------------------------------------------
+    // Structs and Packing
+
+    $splice(PassStructs)
+
+    $splice(InterpolatorPack)
+
+    // --------------------------------------------------
     // Graph
 
     // Graph Properties
@@ -103,15 +110,6 @@ Pass
     
     // Graph Pixel
     $splice(GraphPixel)
-
-    // --------------------------------------------------
-    // Structs and Packing
-
-    $buildType(AttributesMesh)
-
-    $buildType(VaryingsMeshToPS)
-
-    $buildType(VaryingsMeshToDS)
 
     // --------------------------------------------------
     // Build Graph Inputs
