--- a/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/PBRPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/PBRPass.template
@@ -74,6 +74,14 @@ Pass
     int _PassValue;
 
     // --------------------------------------------------
+    // Structs and Packing
+
+    $splice(PassStructs)
+
+    $splice(InterpolatorPack)
+
+
+    // --------------------------------------------------
     // Graph
 
     // Graph Properties
@@ -88,15 +96,6 @@ Pass
     
     // Graph Pixel
     $splice(GraphPixel)
-
-    // --------------------------------------------------
-    // Structs and Packing
-
-    $buildType(AttributesMesh)
-
-    $buildType(VaryingsMeshToPS)
-
-    $buildType(VaryingsMeshToDS)
 
     // --------------------------------------------------
     // Build Graph Inputs
