--- a/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitRaytracingPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitRaytracingPass.template
@@ -32,6 +32,13 @@ Pass
     $splice(PassIncludes)
 
     // --------------------------------------------------
+    // Structs and Packing
+
+    $splice(PassStructs)
+
+    $splice(InterpolatorPack)
+
+    // --------------------------------------------------
     // Graph
 
     // Graph Properties
