--- a/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricRaytracingPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricRaytracingPass.template
@@ -50,6 +50,13 @@ Pass
     $splice(PassIncludes)
 
     // --------------------------------------------------
+    // Structs and Packing
+
+    $splice(PassStructs)
+
+    $splice(InterpolatorPack)
+    
+    // --------------------------------------------------
     // Graph
 
     // Graph Properties
