Use Unity.Mathematics (without Burst) for tile light culling, as well as other optimisations (65% performance improvement on Nintendo Switch).

--- a/com.unity.render-pipelines.universal/package.json
+++ b/com.unity.render-pipelines.universal/package.json
@@ -6,6 +6,7 @@
     "unityRelease": "0a3",
     "displayName": "Universal RP",
     "dependencies": {
+        "com.unity.mathematics": "1.1.0",
         "com.unity.render-pipelines.core": "8.0.0",
         "com.unity.shadergraph": "8.0.0"
     },
