--- a/TestProjects/UniversalGraphicsTest/Packages/manifest.json
+++ b/TestProjects/UniversalGraphicsTest/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "1.0.8",
     "com.unity.ide.visualstudio": "1.0.11",
     "com.unity.ide.vscode": "1.0.7",
+    "com.unity.mathematics": "1.1.0",
     "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.purchasing": "2.0.6",
     "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
