--- a/com.unity.render-pipelines.universal/Runtime/Unity.RenderPipelines.Universal.Runtime.asmdef
+++ b/com.unity.render-pipelines.universal/Runtime/Unity.RenderPipelines.Universal.Runtime.asmdef
@@ -4,6 +4,8 @@
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
         "GUID:ab67fb10353d84448ac887a7367cbda8",
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
@@ -20,7 +22,6 @@
             "define": "POST_PROCESSING_STACK_2_0_0_OR_NEWER"
         },
         {
-
             "name": "com.unity.cinemachine",
             "expression": "2.3.4",
             "define": "CM_2_3_4_OR_NEWER"
