--- a/com.unity.render-pipelines.high-definition/Editor/Material/Hair/ShaderGraph/HairPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Hair/ShaderGraph/HairPass.template
@@ -80,7 +80,7 @@ Pass
     $splice(DotsInstancingOptions)
 
     // Includes
-    $splice(PassIncludes)
+    $splice(PreGraphIncludes)
 
     // Used by SceneSelectionPass
     int _ObjectId;
@@ -317,7 +317,7 @@ Pass
     // --------------------------------------------------
     // Main
 
-    $splice(MainInclude)
+    $splice(PostGraphIncludes)
 
     ENDHLSL
 }
