--- a/com.unity.render-pipelines.high-definition/Editor/Material/Decal/ShaderGraph/DecalPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Decal/ShaderGraph/DecalPass.template
@@ -54,7 +54,7 @@ Pass
     #endif
 
     // Includes
-    $splice(PassIncludes)
+    $splice(PreGraphIncludes)
 
     // --------------------------------------------------
     // Structs and Packing
@@ -166,7 +166,7 @@ Pass
     // --------------------------------------------------
     // Main
 
-    $splice(MainInclude)
+    $splice(PostGraphIncludes)
 
     ENDHLSL
 }
